# STCA_weekly-coding

./: CMakeLists.txt
7-5/: AB.cpp  node.cpp  num.cpp  prime.cpp
7-9/: p1.cpp  p2.cpp  p3.cpp  p4.cpp  p5.cpp
backTrack/: CompositeSumiii.cpp  PermutationLCCI.cpp  PowerSetLCCI.cpp  getMaximumGold.cpp  isAdditiveNumber.cpp  numTilePossibilities.cpp  solveNQueens.cpp  splitIntoFibonacci.cpp
card/: advantageCount.cpp  bagOfTokensScore.cpp  hasGroupsSizeX.cpp  isNStraightHand.cpp  judgePoint24.cpp  maxScore.cpp  minDominoRotations.cpp
sort/: quickSort.cpp  quickSortArray.cpp
string/: addStrings.cpp  braceExpansionII.cpp  braceExpansionII2.cpp  canMakePaliQueries.cpp  lengthOfLastWord.cpp  removeSubfolders.cpp  spellchecker.cpp  validIPAddress.cpp
