cmake_minimum_required(VERSION 3.15)
project(STCA_weekly_coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(STCA_weekly_coding backTrack/PowerSetLCCI.cpp backTrack/PermutationLCCI.cpp backTrack/CompositeSumiii.cpp backTrack/isAdditiveNumber.cpp backTrack/splitIntoFibonacci.cpp backTrack/solveNQueens.cpp backTrack/numTilePossibilities.cpp backTrack/getMaximumGold.cpp string/lengthOfLastWord.cpp string/addStrings.cpp string/validIPAddress.cpp string/spellchecker.cpp string/canMakePaliQueries.cpp string/removeSubfolders.cpp string/braceExpansionII.cpp string/braceExpansionII2.cpp)