cmake_minimum_required(VERSION 3.15)
project(STCA_weekly_coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(STCA_weekly_coding backTrack/PowerSetLCCI.cpp backTrack/PermutationLCCI.cpp backTrack/CompositeSumiii.cpp backTrack/isAdditiveNumber.cpp backTrack/splitIntoFibonacci.cpp backTrack/solveNQueens.cpp backTrack/numTilePossibilities.cpp backTrack/getMaximumGold.cpp string/lengthOfLastWord.cpp string/addStrings.cpp string/validIPAddress.cpp string/spellchecker.cpp string/canMakePaliQueries.cpp string/removeSubfolders.cpp string/braceExpansionII.cpp string/braceExpansionII2.cpp card/hasGroupsSizeX.cpp card/isNStraightHand.cpp sort/quickSort.cpp sort/quickSortArray.cpp 7-5/AB.cpp 7-5/num.cpp 7-5/prime.cpp 7-5/node.cpp card/advantageCount.cpp 7-9/p1.cpp 7-9/p2.cpp 7-9/p3.cpp 7-9/p4.cpp card/bagOfTokensScore.cpp card/minDominoRotations.cpp card/maxScore.cpp card/judgePoint24.cpp 7-9/p5.cpp)